Убрать поле "Разница", дублирует баланс
